--- a/CorpoLoja/index.html
+++ b/CorpoLoja/index.html
@@ -19,36 +19,33 @@
 <body>
 
     <!-- navabr -->
-    <div class="navbar-container">
+    <nav class="navbar-container">
 
-         <nav>
+        <h1 class="icon-logo">
+            LC
+        </h1>
 
-            <div id="logo">
-                <h1>
-                LC
-                </h1>
-            </div>
+        <ul class="navbar-items">
+            <li>
+                <a href="#">Revistas</a>
+            </li>
 
-            <ul class="navbar-items">
-                <li>
-                    <a href="#">Revistas</a>
-                </li>
+            <li>
+                <a href="#">Categorias</a>
+            </li>
 
-                <li>
-                    <a href="#">Categorias</a>
-                </li>
+            <li>
+                 <a href="#">Contato</a>
+            </li>
 
-                <li>
-                    <a href="#">Contato</a>
-                </li>
-            </ul>
+        </ul>
 
-            <a href="" id="pesquisar">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </a>
-         </nav>
+        <a href="" id="pesquisar">
+            <i class="fa-solid fa-magnifying-glass"></i>
+        </a>
 
-    </div>
+    </nav>
+
     
 </body>
 </html>
