tente fazer os slides da pagina

--- a/CorpoLoja/index.html
+++ b/CorpoLoja/index.html
@@ -43,8 +43,61 @@
         <a href="" id="pesquisar">
             <i class="fa-solid fa-magnifying-glass"></i>
         </a>
+        <!-- fim-navabr -->
 
     </nav>
+
+    <!-- estrtura pricipal do projeto -->
+    <main>
+
+        <div class="slider">
+
+            <div class="slides">
+                <!-- radios bnt -->
+                <input type="radio" name="radio-bnt" id="radio1">
+                <input type="radio" name="radio-bnt" id="radio2">
+                <input type="radio" name="radio-bnt" id="radio3">
+                <input type="radio" name="radio-bnt" id="radio4">
+                <!-- fim radio bnt -->
+
+                <!-- slides images -->
+                <div class="slide first">
+                    <img src="/CorpoLoja/img/grenn-foto1.avif" alt="imagem1">
+                </div>
+                <div class="slide first">
+                    <img src="/CorpoLoja/img/pink-foto2.png" alt="imagem2">
+                </div>
+                <div class="slide first">
+                    <img src="/CorpoLoja/img/field-foto3.webp" alt="imagem3">
+                </div>
+                <div class="slide first">
+                    <img src="/CorpoLoja/img/winter-foto4.jpg" alt="imagem4">
+                </div>
+                <!-- fim slides images -->
+
+                <!-- auto navegacao -->
+                 <div class="auto-navegacao">
+                    <div class="auto-btn1"></div>
+                    <div class="auto-btn2"></div>
+                    <div class="auto-btn3"></div>
+                    <div class="auto-btn4"></div>
+                 </div>
+
+            </div>
+
+            <!-- sistema de navegacao -->
+            <div class="manual-navegacao">
+                <label for="radio1" class="manual-btn"></label>
+                <label for="radio1" class="manual-btn"></label>
+                <label for="radio1" class="manual-btn"></label>
+                <label for="radio1" class="manual-btn"></label>
+            </div>
+
+        </div>
+
+
+
+    </main>
 
     
 </body>
