Organizei os slides do projeto
refiz o código de formatação das imagens deixando elas um atras da outra, também tentei refazer o sistema de troca de imagem mas sem sucesso

--- a/CorpoLoja/index.html
+++ b/CorpoLoja/index.html
@@ -62,16 +62,16 @@
 
                 <!-- slides images -->
                 <div class="slide first">
-                    <img src="/CorpoLoja/img/grenn-foto1.avif" alt="imagem1">
+                    <img src="/CorpoLoja/img/blue-foto2.png" alt="imagem1">
                 </div>
                 <div class="slide first">
-                    <img src="/CorpoLoja/img/pink-foto2.png" alt="imagem2">
+                    <img src="/CorpoLoja/img/grenn-foto1.avif" alt="imagem2">
                 </div>
                 <div class="slide first">
-                    <img src="/CorpoLoja/img/field-foto3.webp" alt="imagem3">
+                    <img src="/CorpoLoja/img/red-foto3.png" alt="imagem3">
                 </div>
                 <div class="slide first">
-                    <img src="/CorpoLoja/img/winter-foto4.jpg" alt="imagem4">
+                    <img src="/CorpoLoja/img/pink-foto4.png" alt="imagem4">
                 </div>
                 <!-- fim slides images -->
 
@@ -94,6 +94,12 @@
             </div>
 
         </div>
+
+        <!-- Produtos disponiveis -->
+        <section>
+           
+
+        </section>
 
 
 
